chore: add testing setup

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,8 @@ services:
     image: postgres:latest
     container_name: myposgres
     environment:
-      - POSTGRES_DB:mydatabase
-      - POSTGRES_PASSWORD:secret
-      - POSTGRES_USER:myuser
+      - POSTGRES_DB=mydatabase
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_USER=myuser
     ports:
       - 5444:5432
