--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,14 @@
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:15.2-alpine3.17
     container_name: myposgres
+    restart: always
+    mem_limit: 512mb
     environment:
       - POSTGRES_DB=mydatabase
       - POSTGRES_PASSWORD=secret
       - POSTGRES_USER=myuser
     ports:
       - 5444:5432
+    volumes:
+      - ./volumes/db:/var/lib/postgresql/data
