build: Ajuste do Docker Compose no Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.dialect=org.hibernate.dialect.PosgtreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
+
+spring.docker.compose.enabled=false
